# bevy_wgpu_problem_minimal_repro

./: Cargo.toml  README.md
src/: main.rs
